2nd commit. Basic functionality (minus buttons) now works.