@@ -36,8 +36,18 @@ javafx {
 dependencies {
 
     implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+    implementation 'org.testng:testng:7.1.0'
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+
+    testImplementation 'org.mockito:mockito-core:4.6.1'
+    testImplementation "org.testfx:testfx-core:4.0.16-alpha"
+    testImplementation 'org.testfx:testfx-junit5:4.0.16-alpha'
+    testImplementation 'org.assertj:assertj-core:3.23.1'
+}
+
+run {
+    jvmArgs = ['--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED']
 }
 
 test {
